@@ -315,6 +315,7 @@
 		B2D2D3CF2136D5CE00D8F6B7 /* httpd.conf.in */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = httpd.conf.in; sourceTree = "<group>"; };
 		B2D2D3D02136D5CE00D8F6B7 /* mime.types */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = mime.types; sourceTree = "<group>"; };
 		B2D2D3D52136D5CE00D8F6B7 /* lastfailed */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = lastfailed; sourceTree = "<group>"; };
+		B2D2D5DF21395D6900D8F6B7 /* test_101_ssl_reneg.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_101_ssl_reneg.py; sourceTree = "<group>"; };
 		B2E5D7841AAEEF8C001FD280 /* configure.ac */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = configure.ac; sourceTree = "<group>"; xcLanguageSpecificationIdentifier = xcode.lang.sh; };
 		B2E5D7851AAF1D87001FD280 /* Makefile.am */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = Makefile.am; sourceTree = "<group>"; };
 		B2E5D7861AAF1F4D001FD280 /* AUTHORS */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = AUTHORS; sourceTree = "<group>"; };
@@ -472,6 +473,7 @@
 				B2D2D3CA2136D5CE00D8F6B7 /* test_003_curl_get.py */,
 				B2D2D2D42136D5CE00D8F6B7 /* test_004_curl_post.py */,
 				B2D2D2D32136D5CE00D8F6B7 /* test_100_conn_reuse.py */,
+				B2D2D5DF21395D6900D8F6B7 /* test_101_ssl_reneg.py */,
 				B2D2D2D52136D5CE00D8F6B7 /* TestEnv.py */,
 			);
 			path = e2e;
